completed important category & Completed category

--- a/html/index.html
+++ b/html/index.html
@@ -137,12 +137,12 @@
         <ul class="list items" id="items">
         </ul>
 
-        <div class="completed-title-container">
-          <i class="fa-solid fa-chevron-right"></i>
+        <div class="completed-title-container" id="completed-title-container">
+          <i class="fa-solid fa-chevron-down"></i>
           <h4 class="completed-title">Completed</h4>
         </div>
 
-        <ul class="completed items">
+        <ul class="completed items" id="completed-items">
         </ul>
 
       </div>
