added right side

--- a/html/index.html
+++ b/html/index.html
@@ -151,7 +151,7 @@
         bottom right content 
 
  ----><div class="bottom-right-content" id="bottom-right-content">
-        <div class="section task-title">
+        <div class="section task-title" id="task-title-section">
           <div class="section-icon">
             <i class="fa-regular fa-circle"></i>
           </div>
@@ -227,8 +227,8 @@
             </div>
           </div>
 
-          <div class="section">
-            <textarea name="note" id="note" class="note-input" placeholder="Add note"></textarea>
+          <div class="section" id="note-section">
+            <textarea name="note" id="add-note" class="note-input" placeholder="Add note" ></textarea>
             <div class="updated-time">Updated a few seconds ago</div>
           </div>
 
